--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @font-face {
   font-family: 'Vogue';
-  src: url('./src/assets/Vogue.ttf') format('truetype');
+  src: url('./src/assets/Vogue.ttf');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
