--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,19 @@
 html {
   scroll-behavior: smooth;
 }
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
