--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 @font-face {
   font-family: 'Vogue';
-  src: url('./src/assets/Vogue.ttf');
+  src: url('/src/assets/Vogue.woff2') format('woff2'),
+       url('/src/assets/Vogue.woff') format('woff'),
+       url('/src/assets/Vogue.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
+
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
